Add a few video links

--- a/index.html
+++ b/index.html
@@ -291,9 +291,10 @@ document.getElementsByTagName('head')[0].appendChild(link);
     <span class=title>10 things I wish people knew about Web animation</span>
     <span class=link><a href="https://birtles.github.io/cssconf2019/"
       target=_blank>birtles.github.io/cssconf2019/</a></span>
-    <span class=event>CSSConf 2019</span>
-    <span class=location>深セン</span>
+    <span class=event>CSSConf 2019, 深セン</span>
     <span class=date>2019-03-30</span>
+    <span class=video><a
+      href="https://www.yuque.com/cssconf/5th/nays55">Recording (英語)</a></span>
   <li>
     <a href="https://birtles.github.io/cssconf2019/" target="_blank"><img
       src="img/mozdev2019.png" alt="10 things I hate about animation (and how to
@@ -301,9 +302,14 @@ document.getElementsByTagName('head')[0].appendChild(link);
     <span class=title>アニメーションについて嫌いな10個</span>
     <span class=link><a href="https://birtles.github.io/mozdev2019/"
       target=_blank>birtles.github.io/mozdev2019/</a></span>
-    <span class=event>MDN Developer Roadshow</span>
+    <span class=event>Mozilla Developer Roadshow</span>
     <span class=location>東京、ソール</span>
     <span class=date>2019-11-11, 2019-11-13</span>
+    <span class=video><a
+      href="https://www.youtube.com/watch?v=CYXJeWkivW8"
+      target="_blank">Youtube (日本語)</span>
+    <span class=video><a href="https://www.youtube.com/watch?v=QybMNLFoK5s"
+      target="_blank">Youtube (英語)</a></span>
 <ul>
 <style>
 #in-past-episodes ul {
@@ -2715,7 +2721,8 @@ react.render(
 }
 #fixed-single-page-app-explained .strike {
   text-decoration: line-through;
-  opacity: .5;
+  color: var(--green);
+  opacity: 0.5;
 }
 </style>
 </section>
