Tweak previous talks slides

--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@ document.getElementsByTagName('head')[0].appendChild(link);
     <span class=title>10 things I wish people knew about Web animation</span>
     <span class=link><a href="https://birtles.github.io/cssconf2019/"
       target=_blank>birtles.github.io/cssconf2019/</a></span>
-    <span class=event>CSSConf 2019, 深セン</span>
+    <span class=event>CSSConf 2019 深セン</span>
     <span class=date>2019-03-30</span>
-    <span class=video><a
+    <span class=video>🎞 <a
       href="https://www.yuque.com/cssconf/5th/nays55">Recording (英語)</a></span>
   <li>
     <a href="https://birtles.github.io/cssconf2019/" target="_blank"><img
@@ -303,13 +303,12 @@ document.getElementsByTagName('head')[0].appendChild(link);
     <span class=link><a href="https://birtles.github.io/mozdev2019/"
       target=_blank>birtles.github.io/mozdev2019/</a></span>
     <span class=event>Mozilla Developer Roadshow</span>
-    <span class=location>東京、ソール</span>
     <span class=date>2019-11-11, 2019-11-13</span>
-    <span class=video><a
+    <span class=video>🎞 <a
       href="https://www.youtube.com/watch?v=CYXJeWkivW8"
-      target="_blank">Youtube (日本語)</span>
-    <span class=video><a href="https://www.youtube.com/watch?v=QybMNLFoK5s"
-      target="_blank">Youtube (英語)</a></span>
+      target="_blank">YouTube (日本語)</a></span>
+    <span class=video>🎞 <a href="https://www.youtube.com/watch?v=QybMNLFoK5s"
+      target="_blank">YouTube (英語)</a></span>
 <ul>
 <style>
 #in-past-episodes ul {
@@ -327,7 +326,7 @@ document.getElementsByTagName('head')[0].appendChild(link);
   align-items: center;
   text-align: center;
 
-  font-size: 25px;
+  font-size: 20px;
 }
 #in-past-episodes ul li img {
   width: 350px;
@@ -335,6 +334,13 @@ document.getElementsByTagName('head')[0].appendChild(link);
 }
 #in-past-episodes ul li .title {
   font-weight: 600;
+  font-size: 25px;
+  min-height: 2.8em;
+}
+#in-past-episodes ul li .location,
+#in-past-episodes ul li .date,
+#in-past-episodes ul li .event {
+  color: var(--neutral-5);
 }
 </style>
 </section>
