Link to previous presentations on final slide

--- a/index.html
+++ b/index.html
@@ -2849,6 +2849,20 @@ react.render(
   <a href="https://birtles.github.io/pwanight13/"
     target="_blank">birtles.github.io/pwanight13/</a>
 </div>
+<div class=previous-slides>
+  <p>2019年のプレゼン</p>
+  <ul>
+    <li><a href="https://birtles.github.io/cssconf2019/"
+      target=_blank>birtles.github.io/cssconf2019/</a>
+    <span class=video>🎞 <a
+      href="https://www.yuque.com/cssconf/5th/nays55">Recording (英語)</a></span>
+    <li><a href="https://birtles.github.io/mozdev2019/"
+      target=_blank>birtles.github.io/mozdev2019/</a>
+    <span class=video>🎞 <a
+      href="https://www.youtube.com/watch?v=CYXJeWkivW8"
+      target="_blank">YouTube (日本語)</a></span>
+  </ul>
+</div>
 <div class=links>
   <div class=link>
     <a href="https://twitter.com/brianskold" target=_blank><img class=logo
@@ -2868,7 +2882,25 @@ react.render(
 }
 #thankyou .slides-link,
 #thankyou .links {
-  margin: 1em 0;
+  margin: 1em 0 .5em;
+}
+#thankyou .slides-link {
+  background: var(--green-10);
+  border-radius: 1em;
+  padding-top: .2em;
+  padding-bottom: .2em;
+}
+#thankyou .previous-slides {
+  color: var(--neutral-5);
+  font-size: 20px;
+}
+#thankyou .previous-slides p {
+  margin-top: .5em;
+  margin-bottom: .5em;
+}
+#thankyou .previous-slides ul li {
+  list-style: none;
+  margin-bottom: .5em;
 }
 
 #thankyou a,
