Add a bunch of noopeners

--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@ document.getElementsByTagName('head')[0].appendChild(link);
 </section>
 
 <section id="about-birchill">
-<h2><a href="https://birchill.co.jp" target=_blank><img class=logo
+<h2><a href="https://birchill.co.jp" target=_blank
+      rel="noopener noreferrer"><img class=logo
       src="img/birchill-logo-yoko.svg"></a>とは&hellip;</h2>
 <ul>
   <li>株式会社<ruby>Birchill<rp>(<rt>バーチル<rp>)</ruby>
@@ -285,30 +286,34 @@ document.getElementsByTagName('head')[0].appendChild(link);
 <h2>以前&hellip;</h2>
 <ul>
   <li>
-    <a href="https://birtles.github.io/mozdev2019/" target="_blank"><img
+    <a href="https://birtles.github.io/mozdev2019/" target="_blank"
+      rel="noopener noreferrer"><img
       src="img/cssconf2019.png" alt="10 things I wish people knew about Web
       animation"></a>
     <span class=title>10 things I wish people knew about Web animation</span>
     <span class=link><a href="https://birtles.github.io/cssconf2019/"
-      target=_blank>birtles.github.io/cssconf2019/</a></span>
+      target=_blank
+      rel="noopener noreferrer">birtles.github.io/cssconf2019/</a></span>
     <span class=event>CSSConf 2019 深セン</span>
     <span class=date>2019-03-30</span>
     <span class=video>🎞 <a
       href="https://www.yuque.com/cssconf/5th/nays55">Recording (英語)</a></span>
   <li>
-    <a href="https://birtles.github.io/cssconf2019/" target="_blank"><img
+    <a href="https://birtles.github.io/cssconf2019/" target="_blank"
+      rel="noopener noreferrer"><img
       src="img/mozdev2019.png" alt="10 things I hate about animation (and how to
       fix them)"></a>
     <span class=title>アニメーションについて嫌いな10個</span>
     <span class=link><a href="https://birtles.github.io/mozdev2019/"
-      target=_blank>birtles.github.io/mozdev2019/</a></span>
+      target=_blank
+      rel="noopener noreferrer">birtles.github.io/mozdev2019/</a></span>
     <span class=event>Mozilla Developer Roadshow</span>
     <span class=date>2019-11-11, 2019-11-13</span>
     <span class=video>🎞 <a
       href="https://www.youtube.com/watch?v=CYXJeWkivW8"
-      target="_blank">YouTube (日本語)</a></span>
+      target="_blank" rel="noopener noreferrer">YouTube (日本語)</a></span>
     <span class=video>🎞 <a href="https://www.youtube.com/watch?v=QybMNLFoK5s"
-      target="_blank">YouTube (英語)</a></span>
+      target="_blank" rel="noopener noreferrer">YouTube (英語)</a></span>
 <ul>
 <style>
 #in-past-episodes ul {
@@ -888,7 +893,7 @@ button.onclick = () =&gt; {
   </div>
 </div>
 <div
-  class=footnote>たまにChromeでtransitionが走るけど、Chromeのエンジニアによると、これはChromeのバグです。</div>
+  class=footnote>たまにChromeまたSafariでtransitionが走るけど、Chromeのエンジニアによると、これはChromeのバグです。</div>
 <style>
 #css-transitions-attempt-one .footnote {
   color: var(--neutral-6);
@@ -2942,18 +2947,18 @@ react.render(
   <h2>その他の<span class=highlight>Webブラウザ最前線</code></h2>
   <ul>
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/offset-path"
-           target="_blank"><code>offset-path</code></a>
+           target="_blank" rel="noopener noreferrer"><code>offset-path</code></a>
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-reduced-motion"
-          target="_blank"><code>prefers-reduced-motion</code></a>
+          target="_blank" rel="noopener noreferrer"><code>prefers-reduced-motion</code></a>
     <li><code>steps(5,
         <a href="https://drafts.csswg.org/css-easing-1/#valdef-steps-jump-none"
-          target="_blank">jump-none</a>)</code>
+          target="_blank" rel="noopener noreferrer">jump-none</a>)</code>
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/translate"
-        target="_blank"><code>translate</code></a>,
+        target="_blank" rel="noopener noreferrer"><code>translate</code></a>,
       <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/scale"
-        target="_blank"><code>scale</code></a>,
+        target="_blank" rel="noopener noreferrer"><code>scale</code></a>,
       <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/rotate"
-        target="_blank"><code>rotate</code></a>
+        target="_blank" rel="noopener noreferrer"><code>rotate</code></a>
   </ul>
 <style>
 #more-new-stuffs ul {
@@ -2989,32 +2994,36 @@ react.render(
 <h2>ご清聴ありがとうございました</h2>
 <div class=slides-link>
   <a href="https://birtles.github.io/pwanight13/"
-    target="_blank">birtles.github.io/pwanight13/</a>
+    target="_blank" rel="noopener noreferrer">birtles.github.io/pwanight13/</a>
 </div>
 <div class=previous-slides>
   <p>2019年のプレゼン</p>
   <ul>
     <li><a href="https://birtles.github.io/cssconf2019/"
-      target=_blank>birtles.github.io/cssconf2019/</a>
+      target=_blank rel="noopener noreferrer">birtles.github.io/cssconf2019/</a>
     <span class=video>🎞 <a
       href="https://www.yuque.com/cssconf/5th/nays55">Recording (英語)</a></span>
     <li><a href="https://birtles.github.io/mozdev2019/"
-      target=_blank>birtles.github.io/mozdev2019/</a>
+      target=_blank rel="noopener noreferrer">birtles.github.io/mozdev2019/</a>
     <span class=video>🎞 <a
       href="https://www.youtube.com/watch?v=CYXJeWkivW8"
-      target="_blank">YouTube (日本語)</a></span>
+      target="_blank" rel="noopener noreferrer">YouTube (日本語)</a></span>
   </ul>
 </div>
 <div class=links>
   <div class=link>
-    <a href="https://twitter.com/brianskold" target=_blank><img class=logo
+    <a href="https://twitter.com/brianskold" target=_blank
+       rel="noopener noreferrer"><img class=logo
        src="img/twitter-avatar.png"></a>
-    <a href="https://twitter.com/brianskold" target=_blank>@brianskold</a>
+    <a href="https://twitter.com/brianskold" target=_blank
+       rel="noopener noreferrer">@brianskold</a>
   </div>
   <div class=link>
-    <a href="https://birchill.co.jp" target=_blank><img class=logo
+    <a href="https://birchill.co.jp" target=_blank
+       rel="noopener noreferrer"><img class=logo
        src="img/birchill-logo.svg"></a>
-    <a href="https://birchill.co.jp" target=_blank>birchill.co.jp</a>
+    <a href="https://birchill.co.jp" target=_blank
+       rel="noopener noreferrer">birchill.co.jp</a>
   </div>
 </div>
 <style>
